--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       var wizardWidth = 70;
 
       function getFireballSpeed(left) {
-        return (left === true) ? 5 : 2;
+        return left ? 5 : 2;
       };
 
       function getWizardHeight(wizardWidth) {
@@ -196,7 +196,7 @@
       };
 
       function getWizardX(width) {
-        return width / 2 - wizardWidth / 2;
+        return (width - wizardWidth) / 2;
       };
 
       function getWizardY(height) {
